[package]
name = "nymnoise"
version = "0.1.0"
edition = "2024"

[dependencies]
snow = "0.9.6"
futures = "0.3"
tokio = { version = "1.44.1", features = ["net","io-util","time"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
pin-project = "1"
tracing = "0.1.41"
sha2 = "0.10.8"
bytes = "1.10.1"
thiserror = "2.0.12"
semver = "1.0.26"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["net","io-util","time","macros","rt"] }
rand = "0.9"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
tracing-subscriber = "0.3.19"
