
[package]
name = "sansio-noise"
description = "Experimental Sans-io implementation of the Noise Protocol Framework integrating libcrux PSQ"
version = "0.1.0"
edition = "2024"

[dependencies]
snow = "0.9.6"
thiserror = "2.0.12"
tracing = "0.1.41"
rand = "0.9"

# libcrux-psq = { git = "https://github.com/cryspen/libcrux.git", features = ["test-utils"] }
libcrux-psq = { path = "../../../psq", features = ["test-utils"] }
libcrux-traits = { version = "0.0.2", git = "https://github.com/cryspen/libcrux" }
libcrux-kem = { version = "0.0.2", git = "https://github.com/cryspen/libcrux" }
libcrux-ed25519 = { version = "0.0.2", git = "https://github.com/cryspen/libcrux" }

[dev-dependencies]
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
tracing-subscriber = "0.3.19"
hex = "0.4.3"
tokio = { version = "1.44.1", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }